Fixed z-index issue on country dropdown

--- a/src/pages/Artist/components/Profile/Profile.scss
+++ b/src/pages/Artist/components/Profile/Profile.scss
@@ -174,6 +174,9 @@ section {
           border-radius: .25rem;
         }
       }
+      .country-select-container-header {
+        z-index: 4;
+      }
     }
     .form-control {
       &.invalid {
